add command running and file writing capabilities
